--- a/views/index.erb
+++ b/views/index.erb
@@ -2,9 +2,15 @@
 <html>
 <head>
   <title>The Knuevens</title>
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-  <h1>The Knuevens</h1>
-  <h2>coming April 2017</h2>
+  <div id="site-container">
+    <div id="announcement">
+      <h1>The Knuevens</h1>
+      <img src="./heart.svg" alt="heart" id="heart">
+      <h2> - coming April 2017 - </h2>
+    </div>
+  </div>
 </body>
 </html>
